# wswe

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: main_window_uimanager.ui
src/: wswe.c
